Fix ntsc test video overflow on safari

--- a/web/css/watch.css
+++ b/web/css/watch.css
@@ -36,20 +36,20 @@ html, body, iframe, #container, #overlay {
 }
 
 #bgvid {
+    object-fit: cover;
     position: fixed;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    cursor: e-resize;
+    right: 0;
+    bottom: 0;
+
     min-width: 100%;
     min-height: 100%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    width: auto;
+    height: auto;
     overflow: hidden;
+
+    background-color: black;
+    background-size: cover;
+    cursor: e-resize;
 }
 
 iframe {
